[gd_scene load_steps=26 format=3 uid="uid://fr1t6cqltavt"]

[ext_resource type="Script" path="res://scripts/boar_small.gd" id="1_lk065"]
[ext_resource type="Texture2D" uid="uid://dsnlsn6uandu2" path="res://assets/sprites/Boar-Walk-Sheet.png" id="1_o7njb"]
[ext_resource type="Script" path="res://scripts/health.gd" id="2_mdlva"]
[ext_resource type="Texture2D" uid="uid://qa8o70431fm6" path="res://assets/sprites/Boar-Hit-Sheet.png" id="4_focrp"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="5_nmaew"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="6_sl474"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="7_n5woa"]
[ext_resource type="Script" path="res://scripts/states/EnemyWalk.gd" id="8_oqp57"]
[ext_resource type="Script" path="res://scripts/states/EnemyHit.gd" id="9_wd3aq"]
[ext_resource type="Script" path="res://scripts/states/EnemyDeath.gd" id="10_ltkg5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ytgis"]
radius = 14.0
height = 37.9999

[sub_resource type="Animation" id="Animation_x4g8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_o7njb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_edypj"]
resource_name = "death"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_focrp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_g5t4d"]
resource_name = "hit"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_focrp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a0h5w"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_o7njb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4vc1"]
_data = {
"RESET": SubResource("Animation_x4g8m"),
"death": SubResource("Animation_edypj"),
"hit": SubResource("Animation_g5t4d"),
"walk": SubResource("Animation_a0h5w")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ufai8"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yrjfw"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h1qma"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pncy0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ak4km"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o1n47"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gvl7m"]
states/death/node = SubResource("AnimationNodeAnimation_ufai8")
states/death/position = Vector2(569, 100)
states/hit/node = SubResource("AnimationNodeAnimation_yrjfw")
states/hit/position = Vector2(468, 193)
states/walk/node = SubResource("AnimationNodeAnimation_h1qma")
states/walk/position = Vector2(364, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_pncy0"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_ak4km"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_o1n47")]
graph_offset = Vector2(0, 38.6595)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2a0u2"]
radius = 14.0
height = 37.9999

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4lrf"]
radius = 14.0
height = 37.9999

[node name="Boar_small" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_lk065")
follow_range = 5000.0

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("hurtbox_collision")]
script = ExtResource("2_mdlva")
hurtbox_collision = NodePath("../HurtBox/CollisionShape2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_o7njb")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -13)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ytgis")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h4vc1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_gvl7m")
anim_player = NodePath("../AnimationPlayer")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("5_nmaew")
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1, -13)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_2a0u2")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
script = ExtResource("6_sl474")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, -13)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_v4lrf")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "animation_tree", "character")]
script = ExtResource("7_n5woa")
initial_state = NodePath("Walk")
animation_tree = NodePath("../AnimationTree")
character = NodePath("..")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurt_box")]
script = ExtResource("8_oqp57")
hurt_box = NodePath("../../HurtBox")

[node name="Hit" type="Node" parent="StateMachine" node_paths=PackedStringArray("health", "state_machine", "animation_tree")]
script = ExtResource("9_wd3aq")
health = NodePath("../../Health")
state_machine = NodePath("..")
animation_tree = NodePath("../../AnimationTree")
can_move = false

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_tree", "hitbox_collision")]
script = ExtResource("10_ltkg5")
animation_tree = NodePath("../../AnimationTree")
hitbox_collision = NodePath("../../HitBox/CollisionShape2D")
can_move = false

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -13)
target_position = Vector2(25, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -13)
target_position = Vector2(-25, 0)

[node name="RayCastTopRight" type="RayCast2D" parent="."]
position = Vector2(0, -44)
target_position = Vector2(25, 0)

[node name="RayCastTopLeft" type="RayCast2D" parent="."]
position = Vector2(0, -44)
target_position = Vector2(-25, 0)
